--- a/Pages/appartments.html
+++ b/Pages/appartments.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html long="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Student Express</title>
 
-      <link rel="stylesheet" type="text/css" href="index.css">
-     
-</head>
-    <header>
-        <body>
-      <nav class="navbar">
-        <ul class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="../Student Express/Pages/appartments.html">Appartments</a>
-            <ul class="submenu">
-                <li><a href="../Student Express/Pages/Subpages/Saopaulo.html">Sao Paulo</a></li>
-                <li><a href="../Student Express/Pages/Subpages/madrid.html">Madrid </a></li>
-                <li><a href="../Student Express/Pages/Subpages/santorini.html">Santorini</a></li>
-              </ul>
-            </li>
-          <li>
-            <a href="../Student Express/Pages/howdoesitwork.html">How does it work</a>
-          </li>
-          <li><a href="../Student Express/Pages/aboutus.html">About us</a></li>
-          <li><a href="../Student Express/Pages/contactus.html">Contact us</a></li>
-        </ul>
-      </nav>
-  </body>
-</header>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Student Express</title>
+
+  <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+
+<body>
+  <header>
+    <nav class="navbar">
+      <ul class="menu">
+        <li><button class="HomeButton">Home</li>
+        <li><button class="AppartmentsButton">Appartments</button>
+          <ul class="submenu">
+            <li><button class="saopauloButton">Sao Paulo</button></li>
+            <li><button class="madridButton">Madrid</button></li>
+            <li><button class="santoriniButton">Santorini</button></li>
+          </ul>
+        </li>
+        <li></li><button class="hdButton">How does it work</button></li>
+        <li><button class="aboutUsButton">About us</button></li>
+        <li><button class="contactUsButton">Contact us</button></li>
+      </ul>
+    </nav>
+
+  </header>
+  <section> 
+  
+    <h1 class="tittle">Appartments</h1> 
+    <div> 
+    <img class="process" src="../img/brownlightbed.jpg" atl="thisishow">
+    <p> 1. </p>
+  
+  </div>
+  
+  
+  
+  </section>
+
+  </body>
