--- a/index.html
+++ b/index.html
@@ -1,52 +1,43 @@
 <!DOCTYPE html>
 <html long="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Student Express</title>
 
-      <link rel="stylesheet" type="text/css" href="index.css">
-     
-</head>
-    <header>
-        <body>
-      <nav class="navbar">
-        <ul class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="../Student Express/Pages/appartments.html">Appartments</a>
-            <ul class="submenu">
-                <li><a href="../Student Express/Pages/Subpages/Saopaulo.html">Sao Paulo</a></li>
-                <li><a href="../Student Express/Pages/Subpages/madrid.html">Madrid </a></li>
-                <li><a href="../Student Express/Pages/Subpages/santorini.html">Santorini</a></li>
-              </ul>
-            </li>
-          <li>
-            <a href="../Student Express/Pages/howdoesitwork.html">How does it work</a>
-          </li>
-          <li><a href="../Student Express/Pages/aboutus.html">About us</a></li>
-          <li><a href="../Student Express/Pages/contactus.html">Contact us</a></li>
-        </ul>
-      </nav>
-  </body>
-</header>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Student Express</title>
 
-    <body>
-        <h1 class="tittle">Student Express</h1>
-        <body>
-            <div class="square-container">
-            <img class="student" src="img/student.jpg" alt="ConfusedStudent">
-              <p class="text1">Student Express offers housing service, hospitality and a safe atmosphere. Where find a house won't be a challenge but rather a fun experience.
-                Student Experience is an independent, independently operating real estate manager and developer of student housing where our students are our priority. So you can enjoy the privacy of your studio as well as the attractive facilities that the complex has to offer.
-                 The ultimate Student Experience is all about service, hospitality and atmosphere. All locations are modernly furnished and offer a large number of facilities. Living, relaxing, studying, exercising and working together; that's what Student Experience is all about. Discover, Feel & Share the experience!</p>
-
-                 <iframe class="studentvideo" width="560" height="315" src="https://www.youtube.com/embed/nHNjvXc-6ZY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-          </body>
-    </body>
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
+<body>
+  <header>
+    <nav class="navbar">
+      <ul class="menu">
+        <li><button class="homeButton">Home</button></li>
+        <li><button class="appartmentsButton">Appartments</button>
+          <ul class="submenu">
+            <li><button class="saoPauloButton">Sao Paulo</button></li>
+            <li><button class="madridButton">Madrid</button></li>
+            <li><button class="santoriniButton">Santorini</button></li>
+          </ul>
+        </li>
+        <li></li><button class="hdButton">How does it work</button></li>
+        <li><button class="aboutUsButton">About us</button></li>
+        <li><button class="contactUsButton">Contact us</button></li>
+      </ul>
+    </nav>
+
+  </header>
+  <section></section>
+  <script src="StudentExpress.js"></script>
+  <script src="home.js"></script>
+  <script src="appartments.js"></script>
+  <script src="saopaulo.js"></script>
+  <script src="madrid.js"></script>
+  <script src="santorini.js"></script>
+  <script src="howdoesitwork.js"></script>
+  <script src="aboutUs.js"></script>
+</body>
 
 </html>
- <script src="StudentExpress.js"></script>
