--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <li><button class="santoriniButton">Santorini</button></li>
           </ul>
         </li>
-        <li></li><button class="hdButton">How does it work</button></li>
+        <li><button class="hdButton">How does it work</button></li>
         <li><button class="aboutUsButton">About us</button></li>
         <li><button class="contactUsButton">Contact us</button></li>
       </ul>
     </nav>
-
   </header>
+  
   <section></section>
   <script src="StudentExpress.js"></script>
   <script src="home.js"></script>
