--- a/Pages/appartments.html
+++ b/Pages/appartments.html
@@ -34,8 +34,11 @@
     <h1 class="tittle">Appartments</h1> 
     <div> 
     <img class="process" src="../img/brownlightbed.jpg" atl="thisishow">
-    <p> 1. </p>
-  
+    <p> 1.Wide range of facilities</p>
+    <p>2.Own bathroom and kitchen</p>
+   <p>3.Only for Students</p>
+   <p>4.No waiting list, free registration</p>
+    
   </div>
   
   
