--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </ul>
     </nav>
   </header>
-  
-  <section></section>
+
+  <section><a href="#"></a></section>
   <script src="StudentExpress.js"></script>
   <script src="home.js"></script>
   <script src="appartments.js"></script>
@@ -38,6 +38,7 @@
   <script src="santorini.js"></script>
   <script src="howdoesitwork.js"></script>
   <script src="aboutUs.js"></script>
+  <script src="contactus.js"></script>
 </body>
 
 </html>
