--- a/index.html
+++ b/index.html
@@ -41,4 +41,7 @@
   <script src="contactus.js"></script>
 </body>
 
+<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
+<link href="css/main.css" type="text/css" rel="stylesheet">
+
 </html>
