--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   </header>
 
   <section><a href="#"></a></section>
+
+  
   <script src="StudentExpress.js"></script>
   <script src="home.js"></script>
   <script src="appartments.js"></script>
@@ -39,6 +41,7 @@
   <script src="howdoesitwork.js"></script>
   <script src="aboutUs.js"></script>
   <script src="contactus.js"></script>
+  <script src="socialmedia.js"></script>
 </body>
 
 <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
